--- a/package.json
+++ b/package.json
@@ -23,8 +23,13 @@
     "@json-editor/json-editor": "^2.0.0-alpha.1",
     "@nestjs/common": "^6.7.2",
     "@nestjs/core": "^6.7.2",
+    "@nestjs/cqrs": "^6.1.0",
     "@nestjs/platform-express": "^6.7.2",
+    "ace-builds": "^1.4.7",
     "ejs": "^3.0.1",
+    "enquirer": "^2.3.2",
+    "execa": "^4.0.0",
+    "hygen": "^5.0.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3"
